# sonic-anemometer

./: .gitattributes  Cargo.toml  README.md  TODO.md
benches/: computer.rs
crates/computer/: Cargo.toml
crates/computer/benches/: computer.rs
crates/computer/src/: computer.rs  gui.rs  io.rs  lib.rs  ring_buffer.rs  shader.wgsl  simulator.rs  tui.rs
crates/computer/src/gui/: self_similarity_matrix.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs  shader.wgsl
src/: computer.rs  lib.rs  main.rs  ring_buffer.rs  simulator.rs
