[package]
name = "audio_anemometer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
cpal = "0.15.3"
encase = { version = "0.10.0", features = ["glam"] }
env_logger = "0.11"
eyre = "0.6.12"
glam = "0.29.2"
pollster = "0.3"
rand = "0.8.5"
statrs = "0.18.0"
wgpu = "23.0.0"
winit = { version = "0.29" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "computer"
harness = false
